--- a/SPRING/dhl-server/src/main/resources/application.properties
+++ b/SPRING/dhl-server/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=keystoreLWJ.pkcs12
+server.ssl.key-store-password=keystoreLWJ
+server.ssl.trust-store=trustLWJ.pkcs12
+server.ssl.trust-store-password=trustLWJ
